// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Box Brand 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT gYFURZ"
  >
    <div
      className="sc-dlnjwi bOsBEG"
    >
      This is brand box
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Box Default 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT gYFURZ"
  >
    <div
      className="sc-dlnjwi ghTIof"
    >
      This is default box
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Box Playground 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT gYFURZ"
  >
    <div
      className="sc-dlnjwi ghTIof"
    >
      Example box content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Bookmark 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-hKFxyN iBpFtu"
      disabled={false}
    >
      Bookmark button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Bookmark Active 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-hKFxyN caxjwi"
      disabled={false}
    >
      Bookmark active button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-hKFxyN dpeOGK"
      disabled={false}
    >
      Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Disabled 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-hKFxyN dpeOGK"
      disabled={true}
    >
      This is disabled button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <button
      className="sc-hKFxyN dpeOGK"
      disabled={false}
    >
      This is sample button
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Heading Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <h1
      className="sc-eCApnc upmsQ"
      size="XL"
    >
      This is default heading
    </h1>
  </div>
</div>
`;

exports[`Storyshots Atoms/Heading Levels 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <h1
      className="sc-eCApnc upmsQ"
      size="XL"
    >
      This is level 1 heading
    </h1>
    <h2
      className="sc-eCApnc lfCuoH"
      size="L"
    >
      This is level 2 heading
    </h2>
    <h3
      className="sc-eCApnc Yyqdz"
      size="M"
    >
      This is level 3 heading
    </h3>
    <h4
      className="sc-eCApnc kYLptJ"
      size="S"
    >
      This is level 4 heading
    </h4>
    <h5
      className="sc-eCApnc lfCIpU"
      size="XS"
    >
      This is level 5 heading
    </h5>
    <h6
      className="sc-eCApnc lfCIpU"
      size="XS"
    >
      This is level 6 heading
    </h6>
  </div>
</div>
`;

exports[`Storyshots Atoms/Heading Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <h1
      className="sc-eCApnc upmsQ"
      size="XL"
    >
      This sample content
    </h1>
  </div>
</div>
`;

exports[`Storyshots Atoms/Heading Sizes 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <h1
      className="sc-eCApnc upmsQ"
      size="XL"
    >
      This is extra large heading
    </h1>
    <h1
      className="sc-eCApnc lfCuoH"
      size="L"
    >
      This is large heading
    </h1>
    <h1
      className="sc-eCApnc Yyqdz"
      size="M"
    >
      This is medium heading
    </h1>
    <h1
      className="sc-eCApnc kYLptJ"
      size="S"
    >
      This is small heading
    </h1>
    <h1
      className="sc-eCApnc lfCIpU"
      size="XS"
    >
      This is extra small heading
    </h1>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Custom Width 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-iCoGMd dUXmYh"
    >
      <input
        className="sc-jSFjdj cPnIJW"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-iCoGMd gTKDoB"
    >
      <input
        className="sc-jSFjdj cPnIJW"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Error 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-iCoGMd gTKDoB"
    >
      <input
        className="sc-jSFjdj deIbi"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Password 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-iCoGMd ivWbhe"
    >
      <input
        className="sc-jSFjdj cPnIJW"
        type="password"
      />
      <button
        className="sc-gKAaRy FQBZU"
        onClick={[Function]}
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-iCoGMd gTKDoB"
    >
      <input
        className="sc-jSFjdj cPnIJW"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Price 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-iCoGMd dUjfQa"
    >
      <input
        className="sc-jSFjdj cPnIJW"
        type="number"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Label Defaul 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-fujyAs fWueyT"
    >
      This is default label
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/Label Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-fujyAs fWueyT"
    >
      Label 
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/Logo Black 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Crowdfund logo"
        src="logo-black.svg"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/Logo Playground 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Crowdfund logo"
        src="logo-white.svg"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/Logo White 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Crowdfund logo"
        src="logo-white.svg"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/MenuLink Black 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      aria-current={null}
      className="sc-pNWdM gGWouM"
      href="/fancy-url"
      onClick={[Function]}
    >
      Black menu link
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/MenuLink Playground 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      aria-current={null}
      className="sc-pNWdM ckSJig"
      href="/fancy-url"
      onClick={[Function]}
    >
      Menu link
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/MenuLink White 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      aria-current={null}
      className="sc-pNWdM ckSJig"
      href="/fancy-url"
      onClick={[Function]}
    >
      White menu link
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/Paragraph Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <p
      className="sc-jrsJWt gNpvYE"
    >
      Fusce pellentesque quam semper nulla placerat vehicula. Donec et nibh tortor. Nulla ut felis in neque tempus volutpat ac et justo. Nulla elementum posuere lectus id tincidunt. Phasellus elementum metus arcu, non ultrices odio efficitur ut. Cras tellus quam, vestibulum vel porttitor a, dignissim sit amet dui. Vestibulum varius neque at lacus consequat, nec eleifend orci rhoncus. Praesent viverra non sapien vel blandit. Nulla sollicitudin mauris nisl, id elementum ante blandit in. Praesent interdum elit lorem, ac malesuada purus sollicitudin quis. Nulla condimentum tortor tortor, ac imperdiet tortor faucibus sit amet. Aliquam nibh velit, finibus vel diam sit amet, semper pellentesque libero. Nulla felis nisl, convallis ac molestie eu, pulvinar sit amet libero. Nam nisl arcu, fermentum tristique dui at, tincidunt maximus sem. Phasellus aliquet vestibulum urna eu facilisis. Pellentesque aliquam interdum tortor eu maximus.
    </p>
  </div>
</div>
`;

exports[`Storyshots Atoms/Paragraph Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <p
      className="sc-jrsJWt gNpvYE"
    >
      This is sample paragraph content
    </p>
  </div>
</div>
`;

exports[`Storyshots Atoms/ProgressBar Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <progress
      className="sc-kEqXSa DWcUv"
      max={100}
      value={50}
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/ProgressBar Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <progress
      className="sc-kEqXSa DWcUv"
      max={100}
      value={30}
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Radio Checked 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <input
      checked={true}
      className="sc-iqAclL iqwub"
      disabled={false}
      readOnly={true}
      type="radio"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Radio Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <input
      checked={false}
      className="sc-iqAclL iqwub"
      disabled={false}
      readOnly={true}
      type="radio"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Radio Disabled 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <input
      checked={false}
      className="sc-iqAclL iqwub"
      disabled={true}
      readOnly={true}
      type="radio"
    />
    <input
      checked={true}
      className="sc-iqAclL iqwub"
      disabled={true}
      readOnly={true}
      type="radio"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Radio Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <input
      checked={false}
      className="sc-iqAclL iqwub"
      disabled={false}
      readOnly={true}
      type="radio"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/TextLink Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      className="sc-crzoAE dXRnm"
      href="/default"
      onClick={[Function]}
    >
      Default link
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/TextLink Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <a
      className="sc-crzoAE dXRnm"
      href="/playground"
      onClick={[Function]}
    >
      Playground text link
    </a>
  </div>
</div>
`;

exports[`Storyshots Atoms/TextMessage Error 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-dIsUp dlqttI"
      type="error"
    >
      This is error message
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/TextMessage Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-dIsUp dlqttI"
      type="error"
    >
      Sample error message
    </label>
  </div>
</div>
`;

exports[`Storyshots Atoms/TextMessage Success 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <label
      className="sc-dIsUp ejRfvp"
      type="success"
    >
      This is success message
    </label>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-kfYoZR cqoYBL"
    >
      <header
        className="sc-bkbkJK iEHmpj"
      >
        <h3
          className="sc-eCApnc kYLptJ"
          size="S"
        >
          Title of default card
        </h3>
      </header>
      <p
        className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-hBMUJo gukWOc"
      >
        <button
          className="sc-hKFxyN dpeOGK"
          disabled={false}
          onClick={[Function]}
        >
          Default action
        </button>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-kfYoZR cqoYBL"
    >
      <header
        className="sc-bkbkJK iEHmpj"
      >
        <h3
          className="sc-eCApnc kYLptJ"
          size="S"
        >
          Example card title
        </h3>
      </header>
      <p
        className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-hBMUJo gukWOc"
      >
        <button
          className="sc-hKFxyN dpeOGK"
          disabled={false}
          onClick={[Function]}
        >
          Action button
        </button>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Radio Card 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-kfYoZR khWLsk"
    >
      <input
        checked={false}
        className="sc-iqAclL iqwub"
        disabled={false}
        id="radio-card"
        name="radio-card"
        onChange={[Function]}
        type="radio"
        value="radio-card"
      />
      <header
        className="sc-bkbkJK iEHmpj"
      >
        <label
          className="sc-eCApnc sc-iemWCZ lfCIpU kjjQur"
          htmlFor="radio-card"
          size="XS"
        >
          Title of Radio Card
        </label>
        <p
          className="sc-jrsJWt sc-dIvrsQ gNpvYE jbrAj"
        >
          Pledge 
          $25
           or more
        </p>
        <div
          className="sc-hHEiqL dPfHut"
        >
          <strong
            className="sc-eCApnc lfCIpU"
            size="XS"
          >
            60
          </strong>
          <p
            className="sc-jrsJWt gNpvYE"
          >
            left
          </p>
        </div>
      </header>
      <p
        className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Radio Card Out Of Stock 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-kfYoZR jXJXvI"
    >
      <input
        checked={false}
        className="sc-iqAclL iqwub"
        disabled={true}
        id="radio-card"
        name="radio-card-out-of-stock"
        onChange={[Function]}
        type="radio"
        value="radio-card"
      />
      <header
        className="sc-bkbkJK iEHmpj"
      >
        <label
          className="sc-eCApnc sc-iemWCZ lfCIpU kjjQur"
          htmlFor="radio-card"
          size="XS"
        >
          Title of Radio Card
        </label>
        <p
          className="sc-jrsJWt sc-dIvrsQ gNpvYE jbrAj"
        >
          Pledge 
          $25
           or more
        </p>
        <div
          className="sc-hHEiqL dPfHut"
        >
          <strong
            className="sc-eCApnc lfCIpU"
            size="XS"
          >
            0
          </strong>
          <p
            className="sc-jrsJWt gNpvYE"
          >
            left
          </p>
        </div>
      </header>
      <p
        className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Radio Card Selected 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-kfYoZR bLOSSz"
    >
      <input
        checked={true}
        className="sc-iqAclL iqwub"
        disabled={false}
        id="radio-card"
        name="radio-selected"
        onChange={[Function]}
        type="radio"
        value="radio-card"
      />
      <header
        className="sc-bkbkJK iEHmpj"
      >
        <label
          className="sc-eCApnc sc-iemWCZ lfCIpU kjjQur"
          htmlFor="radio-card"
          size="XS"
        >
          Title of Radio Card
        </label>
        <p
          className="sc-jrsJWt sc-dIvrsQ gNpvYE jbrAj"
        >
          Pledge 
          $25
           or more
        </p>
        <div
          className="sc-hHEiqL dPfHut"
        >
          <strong
            className="sc-eCApnc lfCIpU"
            size="XS"
          >
            10
          </strong>
          <p
            className="sc-jrsJWt gNpvYE"
          >
            left
          </p>
        </div>
      </header>
      <p
        className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-hBMUJo fyHSNh"
      >
        <form
          className="sc-fnVZcZ RyucL"
          onSubmit={[Function]}
        >
          <div
            className="sc-ksluID dgQoxL"
          >
            <label
              className="sc-fujyAs sc-bqGGPW fWueyT ceVUzu"
              htmlFor="pledge"
            >
              Enter your pledge: 
            </label>
            <div
              className="sc-iCoGMd cjUmVO"
            >
              <input
                className="sc-jSFjdj cPnIJW"
                defaultValue={25}
                id="pledge"
                name="pledge"
                onBlur={[Function]}
                onChange={[Function]}
                type="number"
              />
            </div>
          </div>
          <button
            className="sc-hKFxyN dpeOGK"
            disabled={false}
            type="submit"
          >
            Continue
          </button>
        </form>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Reward Card 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-kfYoZR cqoYBL"
    >
      <header
        className="sc-bkbkJK iEHmpj"
      >
        <h3
          className="sc-eCApnc kYLptJ"
          size="S"
        >
          Title of Reward Card
        </h3>
        <p
          className="sc-jrsJWt sc-dIvrsQ gNpvYE dNCvbD"
        >
          Pledge 
          $25
           or more
        </p>
      </header>
      <p
        className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-hBMUJo gukWOc"
      >
        <div
          className="sc-fFSPTT cIklPD"
        >
          <strong
            className="sc-eCApnc upmsQ"
            size="XL"
          >
            60
          </strong>
          <p
            className="sc-jrsJWt gNpvYE"
          >
            left
          </p>
        </div>
        <button
          className="sc-hKFxyN dpeOGK"
          disabled={false}
          onClick={[Function]}
        >
          Select Reward
        </button>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Reward Card Out Of Stock 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <article
      className="sc-kfYoZR hANvBP"
    >
      <header
        className="sc-bkbkJK iEHmpj"
      >
        <h3
          className="sc-eCApnc kYLptJ"
          size="S"
        >
          Title of Reward Card Out of stock
        </h3>
        <p
          className="sc-jrsJWt sc-dIvrsQ gNpvYE dNCvbD"
        >
          Pledge 
          $200
           or more
        </p>
      </header>
      <p
        className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin, felis metus sagittis mi, vitae tristique ex ligula ut risus. Phasellus nec faucibus turpis.
      </p>
      <footer
        className="sc-hBMUJo gukWOc"
      >
        <div
          className="sc-fFSPTT cIklPD"
        >
          <strong
            className="sc-eCApnc upmsQ"
            size="XL"
          >
            0
          </strong>
          <p
            className="sc-jrsJWt gNpvYE"
          >
            left
          </p>
        </div>
        <button
          className="sc-hKFxyN dpeOGK"
          disabled={true}
          onClick={[Function]}
        >
          Out of stock
        </button>
      </footer>
    </article>
  </div>
</div>
`;

exports[`Storyshots Molecules/Cardinal Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-fKgJPI Silfp"
    >
      <h3
        className="sc-eCApnc sc-bCwfaz upmsQ YqDmz"
        size="XL"
      >
        56
      </h3>
      <p
        className="sc-jrsJWt sc-iwajpm gNpvYE kKsTZo"
      >
        days left
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Cardinal Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-fKgJPI Silfp"
    >
      <h3
        className="sc-eCApnc sc-bCwfaz upmsQ YqDmz"
        size="XL"
      >
        5,007
      </h3>
      <p
        className="sc-jrsJWt sc-iwajpm gNpvYE kKsTZo"
      >
        total backers
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Cardinal Price Format 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-fKgJPI Silfp"
    >
      <h3
        className="sc-eCApnc sc-bCwfaz upmsQ YqDmz"
        size="XL"
      >
        $78,000
      </h3>
      <p
        className="sc-jrsJWt sc-iwajpm gNpvYE kKsTZo"
      >
        of $100,000 backed
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-ksluID cFDQrf"
    >
      <label
        className="sc-fujyAs sc-bqGGPW fWueyT ceVUzu"
        htmlFor="default-input"
      >
        Default input: 
      </label>
      <div
        className="sc-iCoGMd gTKDoB"
      >
        <input
          className="sc-jSFjdj cPnIJW"
          id="default-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Error 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-ksluID cFDQrf"
    >
      <label
        className="sc-fujyAs sc-bqGGPW fWueyT ceVUzu"
        htmlFor="error-input"
      >
        Error input: 
      </label>
      <div
        className="sc-iCoGMd gTKDoB"
      >
        <input
          className="sc-jSFjdj deIbi"
          id="error-input"
        />
      </div>
      <label
        className="sc-dIsUp dlqttI"
        type="error"
      >
        Sample error message
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-ksluID cFDQrf"
    >
      <label
        className="sc-fujyAs sc-bqGGPW fWueyT ceVUzu"
        htmlFor="playground-input"
      >
        Example label: 
      </label>
      <div
        className="sc-iCoGMd gTKDoB"
      >
        <input
          className="sc-jSFjdj cPnIJW"
          id="playground-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Single Column 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-ksluID dgQoxL"
    >
      <label
        className="sc-fujyAs sc-bqGGPW fWueyT ceVUzu"
        htmlFor="single-column-input"
      >
        Single column input: 
      </label>
      <div
        className="sc-iCoGMd gTKDoB"
      >
        <input
          className="sc-jSFjdj cPnIJW"
          id="single-column-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/InputField Single Column Error 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <div
      className="sc-ksluID dgQoxL"
    >
      <label
        className="sc-fujyAs sc-bqGGPW fWueyT ceVUzu"
        htmlFor="single-column-input"
      >
        Single column input: 
      </label>
      <div
        className="sc-iCoGMd gTKDoB"
      >
        <input
          className="sc-jSFjdj deIbi"
          id="single-column-input"
        />
      </div>
      <label
        className="sc-dIsUp dlqttI"
        type="error"
      >
        Sample error message
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Footer Default 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT kLUjht"
  >
    <footer
      className="sc-cxNHIi gITYqC"
    >
      <div
        className="sc-lmgQwP eiXtDV"
      >
        <div>
          <a
            href="/"
            onClick={[Function]}
          >
            <img
              alt="Crowdfund logo"
              src="logo-black.svg"
            />
          </a>
          <p
            className="sc-jrsJWt sc-ezzafa gNpvYE juAIII"
          >
            Crowdfunding means a way of funding by the community. It is an innovative model of financing creative ideas through the community.
          </p>
        </div>
        <nav
          className="sc-giAqHp tftuR"
        >
          <div>
            <h3
              className="sc-eCApnc sc-kLojOw lfCIpU hkGfPY"
              size="XS"
            >
              Help
            </h3>
            <ul
              className="sc-bYwzuL fMludt"
            >
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/privacy-policy"
                  onClick={[Function]}
                >
                  Privacy Policy
                </a>
              </li>
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/regulations"
                  onClick={[Function]}
                >
                  Regulations
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
      <div
        className="sc-iJCRrE bSNXLT"
      >
        <div
          className="sc-lmgQwP eiXtDV"
        >
          <p
            className="sc-fujyAs fWueyT"
          >
            © Copyright 
            2021
             by Crowdfund
          </p>
          <ul
            className="sc-bYwzuL kOMTYy"
          >
            <li>
              <a
                className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                href="https://facebook.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Facebook
              </a>
            </li>
            <li>
              <a
                className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                href="https://instagram.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Instagram
              </a>
            </li>
            <li>
              <a
                className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                href="https://twitter.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Twitter
              </a>
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Organisms/Footer Only Copy 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT kLUjht"
  >
    <footer
      className="sc-cxNHIi ileoKJ"
    >
      <p
        className="sc-fujyAs fWueyT"
      >
        © Copyright 
        2021
         by Crowdfund
      </p>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Organisms/Footer Playground 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT kLUjht"
  >
    <footer
      className="sc-cxNHIi gITYqC"
    >
      <div
        className="sc-lmgQwP eiXtDV"
      >
        <div>
          <a
            href="/"
            onClick={[Function]}
          >
            <img
              alt="Crowdfund logo"
              src="logo-black.svg"
            />
          </a>
          <p
            className="sc-jrsJWt sc-ezzafa gNpvYE juAIII"
          >
            Crowdfunding means a way of funding by the community. It is an innovative model of financing creative ideas through the community.
          </p>
        </div>
        <nav
          className="sc-giAqHp cDnYhR"
        >
          <div>
            <h3
              className="sc-eCApnc sc-kLojOw lfCIpU hkGfPY"
              size="XS"
            >
              Menu
            </h3>
            <ul
              className="sc-bYwzuL fMludt"
            >
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/about"
                  onClick={[Function]}
                >
                  About
                </a>
              </li>
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/discover"
                  onClick={[Function]}
                >
                  Discover
                </a>
              </li>
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/get-started"
                  onClick={[Function]}
                >
                  Get Started
                </a>
              </li>
            </ul>
          </div>
          <div>
            <h3
              className="sc-eCApnc sc-kLojOw lfCIpU hkGfPY"
              size="XS"
            >
              Help
            </h3>
            <ul
              className="sc-bYwzuL fMludt"
            >
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/privacy-policy"
                  onClick={[Function]}
                >
                  Privacy Policy
                </a>
              </li>
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/regulations"
                  onClick={[Function]}
                >
                  Regulations
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
      <div
        className="sc-iJCRrE bSNXLT"
      >
        <div
          className="sc-lmgQwP eiXtDV"
        >
          <p
            className="sc-fujyAs fWueyT"
          >
            © Copyright 
            2021
             by Crowdfund
          </p>
          <ul
            className="sc-bYwzuL kOMTYy"
          >
            <li>
              <a
                className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                href="https://facebook.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Facebook
              </a>
            </li>
            <li>
              <a
                className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                href="https://instagram.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Instagram
              </a>
            </li>
            <li>
              <a
                className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                href="https://twitter.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Twitter
              </a>
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Organisms/Footer With Nav 1`] = `
<div
  className="sc-bdnxRM gRPInY"
>
  <div
    className="sc-gtsrHT kLUjht"
  >
    <footer
      className="sc-cxNHIi gITYqC"
    >
      <div
        className="sc-lmgQwP eiXtDV"
      >
        <div>
          <a
            href="/"
            onClick={[Function]}
          >
            <img
              alt="Crowdfund logo"
              src="logo-black.svg"
            />
          </a>
          <p
            className="sc-jrsJWt sc-ezzafa gNpvYE juAIII"
          >
            Crowdfunding means a way of funding by the community. It is an innovative model of financing creative ideas through the community.
          </p>
        </div>
        <nav
          className="sc-giAqHp cDnYhR"
        >
          <div>
            <h3
              className="sc-eCApnc sc-kLojOw lfCIpU hkGfPY"
              size="XS"
            >
              Menu
            </h3>
            <ul
              className="sc-bYwzuL fMludt"
            >
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/about"
                  onClick={[Function]}
                >
                  About
                </a>
              </li>
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/discover"
                  onClick={[Function]}
                >
                  Discover
                </a>
              </li>
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/get-started"
                  onClick={[Function]}
                >
                  Get Started
                </a>
              </li>
            </ul>
          </div>
          <div>
            <h3
              className="sc-eCApnc sc-kLojOw lfCIpU hkGfPY"
              size="XS"
            >
              Help
            </h3>
            <ul
              className="sc-bYwzuL fMludt"
            >
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/privacy-policy"
                  onClick={[Function]}
                >
                  Privacy Policy
                </a>
              </li>
              <li>
                <a
                  className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                  href="/regulations"
                  onClick={[Function]}
                >
                  Regulations
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
      <div
        className="sc-iJCRrE bSNXLT"
      >
        <div
          className="sc-lmgQwP eiXtDV"
        >
          <p
            className="sc-fujyAs fWueyT"
          >
            © Copyright 
            2021
             by Crowdfund
          </p>
          <ul
            className="sc-bYwzuL kOMTYy"
          >
            <li>
              <a
                className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                href="https://facebook.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Facebook
              </a>
            </li>
            <li>
              <a
                className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                href="https://instagram.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Instagram
              </a>
            </li>
            <li>
              <a
                className="sc-pNWdM sc-iklJeh gGWouM eXXdhF"
                href="https://twitter.com"
                rel="nofollow noreferrer"
                target="_blank"
              >
                Twitter
              </a>
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal Default 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-jJMGnK bVBRvJ"
  >
    <div
      className="sc-hiKfDv dVdSyt"
    >
      <button
        className="sc-gXfVKN ikoBeH"
        onClick={[Function]}
      />
      <p>
        Content of Default Modal
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal Described 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-jJMGnK bVBRvJ"
  >
    <div
      className="sc-hiKfDv dVdSyt"
    >
      <button
        className="sc-gXfVKN ikoBeH"
        onClick={[Function]}
      />
      <h2
        className="sc-eCApnc sc-cBoqAE kYLptJ dUtpQW"
        size="S"
      >
        Desscribed Modal Title
      </h2>
      <p
        className="sc-jrsJWt sc-ciSkZP gNpvYE fHmEPJ"
      >
        Sample described modal description
      </p>
      <p>
        Content of Described Modal
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal Playground 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-jJMGnK bVBRvJ"
  >
    <div
      className="sc-hiKfDv dVdSyt"
    >
      <button
        className="sc-gXfVKN ikoBeH"
        onClick={[Function]}
      />
      <p>
        Example content
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal With Complex Children 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-jJMGnK bVBRvJ"
  >
    <div
      className="sc-hiKfDv dVdSyt"
    >
      <button
        className="sc-gXfVKN ikoBeH"
        onClick={[Function]}
      />
      <h2
        className="sc-eCApnc sc-cBoqAE kYLptJ dUtpQW"
        size="S"
      >
        Complex children data
      </h2>
      <p
        className="sc-jrsJWt sc-ciSkZP gNpvYE fHmEPJ"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In posuere ante quis dui dapibus. eget malesuada orci porta. Ut sed purus eget tellus porta facilisis sed eu risus.
      </p>
      <div
        className="sc-jcwpoC kOYFcH"
      >
        <article
          className="sc-kfYoZR khWLsk"
        >
          <input
            checked={false}
            className="sc-iqAclL iqwub"
            disabled={false}
            id="no-reward"
            name="no-reward"
            onChange={[Function]}
            type="radio"
            value="no-reward"
          />
          <header
            className="sc-bkbkJK iEHmpj"
          >
            <label
              className="sc-eCApnc sc-iemWCZ lfCIpU kjjQur"
              htmlFor="no-reward"
              size="XS"
            >
              Pledge with no reward
            </label>
          </header>
          <p
            className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin.
          </p>
        </article>
        <article
          className="sc-kfYoZR khWLsk"
        >
          <input
            checked={false}
            className="sc-iqAclL iqwub"
            disabled={false}
            id="bamboo"
            name="bamboo"
            onChange={[Function]}
            type="radio"
            value="bamboo"
          />
          <header
            className="sc-bkbkJK iEHmpj"
          >
            <label
              className="sc-eCApnc sc-iemWCZ lfCIpU kjjQur"
              htmlFor="bamboo"
              size="XS"
            >
              Bamboo Stand
            </label>
            <p
              className="sc-jrsJWt sc-dIvrsQ gNpvYE jbrAj"
            >
              Pledge 
              $25
               or more
            </p>
            <div
              className="sc-hHEiqL dPfHut"
            >
              <strong
                className="sc-eCApnc lfCIpU"
                size="XS"
              >
                101
              </strong>
              <p
                className="sc-jrsJWt gNpvYE"
              >
                left
              </p>
            </div>
          </header>
          <p
            className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin.
          </p>
        </article>
        <article
          className="sc-kfYoZR khWLsk"
        >
          <input
            checked={false}
            className="sc-iqAclL iqwub"
            disabled={false}
            id="black-edition"
            name="black-edition"
            onChange={[Function]}
            type="radio"
            value="black-edition"
          />
          <header
            className="sc-bkbkJK iEHmpj"
          >
            <label
              className="sc-eCApnc sc-iemWCZ lfCIpU kjjQur"
              htmlFor="black-edition"
              size="XS"
            >
              Black Edition Stand
            </label>
            <p
              className="sc-jrsJWt sc-dIvrsQ gNpvYE jbrAj"
            >
              Pledge 
              $75
               or more
            </p>
            <div
              className="sc-hHEiqL dPfHut"
            >
              <strong
                className="sc-eCApnc lfCIpU"
                size="XS"
              >
                64
              </strong>
              <p
                className="sc-jrsJWt gNpvYE"
              >
                left
              </p>
            </div>
          </header>
          <p
            className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin.
          </p>
        </article>
        <article
          className="sc-kfYoZR jXJXvI"
        >
          <input
            checked={false}
            className="sc-iqAclL iqwub"
            disabled={true}
            id="mahogany"
            name="mahogany"
            onChange={[Function]}
            type="radio"
            value="mahogany"
          />
          <header
            className="sc-bkbkJK iEHmpj"
          >
            <label
              className="sc-eCApnc sc-iemWCZ lfCIpU kjjQur"
              htmlFor="mahogany"
              size="XS"
            >
              Mahogany Special Edition
            </label>
            <p
              className="sc-jrsJWt sc-dIvrsQ gNpvYE jbrAj"
            >
              Pledge 
              $200
               or more
            </p>
            <div
              className="sc-hHEiqL dPfHut"
            >
              <strong
                className="sc-eCApnc lfCIpU"
                size="XS"
              >
                0
              </strong>
              <p
                className="sc-jrsJWt gNpvYE"
              >
                left
              </p>
            </div>
          </header>
          <p
            className="sc-jrsJWt sc-dlMDgC gNpvYE biLbaH"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, odio sed tincidunt sollicitudin.
          </p>
        </article>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Modal Without Close Button 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-jJMGnK bVBRvJ"
  >
    <div
      className="sc-hiKfDv dVdSyt"
    >
      <p>
        Content of Without Close Button Modal
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar Black 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-carFqZ glhipj"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-black.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-iTVJFM fvXxEW"
        >
          <li>
            <a
              aria-current={null}
              className="sc-pNWdM gGWouM"
              href="/about"
              onClick={[Function]}
            >
              About
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-pNWdM gGWouM"
              href="/discover"
              onClick={[Function]}
            >
              Discover
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-pNWdM gGWouM"
              href="/get-started"
              onClick={[Function]}
            >
              Get Started
            </a>
          </li>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar Playground 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-carFqZ glhipj"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-white.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-iTVJFM fvXxEW"
        >
          <li>
            <a
              aria-current={null}
              className="sc-pNWdM ckSJig"
              href="/about"
              onClick={[Function]}
            >
              About
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-pNWdM ckSJig"
              href="/discover"
              onClick={[Function]}
            >
              Discover
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-pNWdM ckSJig"
              href="/get-started"
              onClick={[Function]}
            >
              Get Started
            </a>
          </li>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar White 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-carFqZ glhipj"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-white.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-iTVJFM fvXxEW"
        >
          <li>
            <a
              aria-current={null}
              className="sc-pNWdM ckSJig"
              href="/about"
              onClick={[Function]}
            >
              About
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-pNWdM ckSJig"
              href="/discover"
              onClick={[Function]}
            >
              Discover
            </a>
          </li>
          <li>
            <a
              aria-current={null}
              className="sc-pNWdM ckSJig"
              href="/get-started"
              onClick={[Function]}
            >
              Get Started
            </a>
          </li>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar Without Nav Items Black 1`] = `
<div
  className="sc-bdnxRM iMHPHc"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-carFqZ bEQpDP"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-black.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-iTVJFM fvXxEW"
        />
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Organisms/NavBar Without Nav Items White 1`] = `
<div
  className="sc-bdnxRM TXFbJ"
>
  <div
    className="sc-gtsrHT gAAakf"
  >
    <header
      className="sc-carFqZ bEQpDP"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Crowdfund logo"
          src="logo-white.svg"
        />
      </a>
      <nav>
        <ul
          className="sc-iTVJFM fvXxEW"
        />
      </nav>
    </header>
  </div>
</div>
`;
